Sub-page "Features" added with content

--- a/features.html
+++ b/features.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="NavBar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="features.html">Features</a>
+                        <a class="nav-link" href="#">Features</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Download</a>
@@ -55,34 +55,25 @@
         <div class="grid-container">
             <div class="item1">
                 <h1>
-                    <b>Online Sail Tracker - share and compare your sailing achievements</b>
+                    Lear more about the best features of Online Sail Tracker!
                 </h1>
-                <h3>
-                    Get all your statistics and logs in one place. Thanks to our app you can instantly upload data from any device runnig Navionics, OpenCPN, Fast Track or Sail Expert and share them
-                </h3>
             </div>
             <div class="item2">
-                <!-- <div id="mapid" width="600">
-                </div> -->
-                <div id='map' style='width: 750px; height: 500px;'></div>
-                <script>
-                    mapboxgl.accessToken = 'pk.eyJ1Ijoia293YWxza2lkYW5pZWwiLCJhIjoiY2toeDN0Mml4MGZ6MzJybXBvdnZ0N2pwbiJ9.xANFVHfmXC6L8hVvF4j9Jw';
-                    var map = new mapboxgl.Map({
-                        container: 'map',
-                        style: 'mapbox://styles/kowalskidaniel/ckhx4exkd0hs019nizg37mw2b', // stylesheet location
-                        center: [1.4869957410303694, 50.97448726677103], // starting position [lng, lat]
-                        zoom: 6 // starting zoom
-                    });
-                </script>
+
             </div>
             <div class="item3">
-                <img src="track.jpg" width="750" height="500">
+                <h2>
+                    - Display track in real time</br>
+                    - Measure everything you want</br>
+                    - Load grid file to display weather conditions</br>
+                    - Share your routs with friends</br>
+                </h2>
             </div>
             <div class="item4">
-                <h3>
-                    Our goal is to enchance your sailing experience by providing you with easy and fast way to analize every apect of your passion. And after you are done sailing you can easly compare your speed upwind, downwind, number of tacks or even the whole track with
-                    your friends to once and for all answer the most important question - who is the best among you!
-                </h3>
+
+            </div>
+            <div class="item5">
+                <img src="weather.jpg">
             </div>
         </div>
     </div>
